<resources>
    <string name="app_name">Smartlife</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="no_internet_txt">Your internet connection is currently not available.Please check or try again</string>
    <string name="aqli_tanlov">Aqli Tanlov</string>
    <string name="password">Password</string>
    <string name="sign_in_2">Sign in</string>
    <string name="txt_to_sign_in">Already have an account? Sign in <font color="#403DD1">here</font>.</string>
    <string name="txt_to_sign_up">Don\'t have an account? Sign up</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="sign_up_2">Sign up</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone number</string>
    <string name="txt_remark">We value your time and money!</string>
    <string name="finish">Finish</string>
</resources>