<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Auth.SignUpActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_logo_1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/smartlife_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:text="App Description"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo_1" />

    <TextView
        android:id="@+id/txt_signUp_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_desc" />

    <EditText
        android:id="@+id/edt_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edt_background"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:minLines="1"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txt_signUp_ex" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/edt_background"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:minLines="1"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edt_email_sign_up" />

    <EditText
        android:id="@+id/edt_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/edt_background"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/repeat_your_password"
        android:inputType="textPassword"
        android:minLines="1"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edt_surname" />

    <TextView
        android:id="@+id/txt_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/txt_to_sign_in"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_signUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/main"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/sign_up_2"
        android:textAllCaps="false"
        android:textSize="10sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>