<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Auth.UserDetailsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_logo_2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/smartlife_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Some more info about you"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo_2" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edt_background"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="Name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minLines="1"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txt_page_title" />

    <EditText
        android:id="@+id/edt_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/edt_background"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/surname"
        android:importantForAutofill="no"
        android:minLines="1"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edt_name" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/edt_background"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minLines="1"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edt_surname"
        tools:ignore="TextFields" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="13dp"
        android:elevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_phone">

        <AutoCompleteTextView
            android:id="@+id/dd_choose_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="Choose your city"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txt_remark"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_finish"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/main"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textSize="10sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>